// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-1il6azq-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-1h245c6"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="filled"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-15ow8ps-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="elevated"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-hzcvm6-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                hintMsg="Error in Text Field"
                iconName="search"
                lean={false}
                placeholder="Label"
                required={false}
                status="normal"
                styleType="filled"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-13akgc3"
                disabled={false}
                placeholder="Label "
                required={false}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-19vexqt"
                disabled={false}
                required={false}
                styleType="outlined"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-g5h1c4-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-xp95x8-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-g5h1c4-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={false}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-yyyd2u-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="filled"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-i5u9u6-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="outlined"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-dz29m7-TextInputWrapper"
      >
        <div
          className="css-106rjmy-TextInputWrapper"
        >
          <div
            className="css-19bjb4x-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-bzlo54"
                disabled={true}
                placeholder="Label"
                required={false}
                styleType="elevated"
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-11b8esb-TextInputWrapper"
            >
              <div
                className="css-19bjb4x-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                    styleType="filled"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-14wuxou-TextInputWrapper"
            >
              <div
                className="css-19bjb4x-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                    styleType="outlined"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-1807tpf-TextInputWrapper"
            >
              <div
                className="css-19bjb4x-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                    styleType="elevated"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-11b8esb-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                    styleType="filled"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-14wuxou-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                    styleType="outlined"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-1807tpf-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                    styleType="elevated"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-lsujln-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    hintMsg="Error in Text Field"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="filled"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-y2q41j-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-1xeanin-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    hintMsg="Error in Text Field"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="outlined"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-y2q41j-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-u1rsfx-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    hintMsg="Error in Text Field"
                    placeholder="Label"
                    required={false}
                    status="error"
                    styleType="elevated"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-y2q41j-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-hzcvm6-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    hintMsg="Error in Text Field"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="filled"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-lxhvoy-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-xp95x8-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    hintMsg="Error in Text Field"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="outlined"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-lxhvoy-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-dz29m7-TextInputWrapper"
          >
            <div
              className="css-15ow8ps-TextInputWrapper"
            >
              <div
                className="css-1il6azq-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    disabled={false}
                    hintMsg="Error in Text Field"
                    placeholder="Label"
                    required={false}
                    status="hint"
                    styleType="elevated"
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-lxhvoy-TextInputWrapper"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
